--- a/_SentAnalysis_Colab_Clean.ipynb
+++ b/_SentAnalysis_Colab_Clean.ipynb
@@ -23,10 +23,21 @@
       "name": "_SentAnalysis Colab Clean.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kashyani/Sentiment-Analysis/blob/master/_SentAnalysis_Colab_Clean.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -406,10 +417,10 @@
       "source": [
         "# Fetch Tweets from Twitter API. I used my Twitter developer account credentials here for authentication purposes\n",
         "\n",
-        "consumer_key = 'QIaYDkttWOb5aF9pSaaJla4KZ'\n",
-        "consumer_secret = 'nrdGhaGPYxhsKCbUkRD8mNcLjXOWTcybh9rrdRuepgRghMHCpD'\n",
-        "access_token = '1204316269484240897-PnKs9wvsH8SCmzeOueJk3q5yX7FiMu'\n",
-        "access_token_secret = '1I4e76z1SLaLBZ4k39fT2xWOjxd9Mo3QY9128anL198bg'\n",
+        "consumer_key = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'\n",
+        "consumer_secret = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'\n",
+        "access_token = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'\n",
+        "access_token_secret = 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'\n",
         "\n",
         "auth = tw.OAuthHandler(consumer_key,consumer_secret)\n",
         "auth.set_access_token(access_token,access_token_secret)\n",
